--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,21 @@
 ﻿<div class="container-fluid container-with-menu">
   <!-- top menu -->
-  <app-navigation *ngIf="topMenuVisible"></app-navigation>
+  <app-navigation *ngIf="topMenuVisible" class="menu-nav"></app-navigation>
+  <div class="amiga-theme text-align: center;">
+    <pre>
+
+  ███▄▄▄▄      ▄████████  ▄█     █▄   ▄█     ▄████████
+  ███▀▀▀██▄   ███    ███ ███     ███ ███    ███    ███
+  ███   ███   ███    ███ ███     ███ ███▌   ███    ███
+  ███   ███   ███    ███ ███     ███ ███▌   ███    ███
+  ███   ███ ▀███████████ ███     ███ ███▌ ▀███████████
+  ███   ███   ███    ███ ███     ███ ███    ███    ███
+  ███   ███   ███    ███ ███ ▄█▄ ███ ███    ███    ███
+   ▀█   █▀    ███    █▀   ▀███▀███▀  █▀     ███    █▀
+
+  Cień snów przebrzmiałych
+  </pre>
+  </div>
   <!-- selected function -->
   <router-outlet></router-outlet>
 </div>
