--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<header>
+<header class="header">
   <div *ngIf="!State.IsAdmin" class="navigation">
     <ul>
       <li><a href="#"><i class="fas fa-home nav-item"></i> HOME</a></li>
